tests/errors/semantic/E011_mod_a.zy
# E011_mod_a {
    #> { fn_a }
    fn_a() { <~ "a" }
}
